# mpal-cli

./: .gitignore  CHANGELOG.md  CODEX.md  LICENSE  README.md  pyproject.toml
docs/: ASSETS_SPEC.md  CLI_SPEC.md  DATA_MODEL.md  FINANCIAL_MODEL.md  PRODUCT_SPEC.md  RELEASE.md  ROADMAP.md
scripts/: manual_qa.ps1  wheel_smoke_test.ps1
src/fundlog/: __init__.py  __main__.py  amounts.py  assets.py  cli.py  config.py  dates.py  errors.py  numbers.py
src/fundlog/output/: __init__.py  console.py  formatting.py  theme.py
src/fundlog/storage/: __init__.py  asset_logs.py  asset_transactions.py  assets.py  database.py  entries.py  logs.py  portfolios.py  summaries.py
src/mpal/: __init__.py  __main__.py  amounts.py  asset_replay.py  assets.py  cli.py  config.py  dates.py  errors.py  numbers.py
src/mpal/output/: __init__.py  console.py  formatting.py  theme.py
src/mpal/storage/: __init__.py  asset_logs.py  asset_transactions.py  assets.py  database.py  entries.py  logs.py  portfolios.py  summaries.py
tests/: test_amounts.py  test_asset_accounting_audit.py  test_asset_cli.py  test_asset_delete_entry.py  test_asset_edit.py  test_asset_log.py  test_asset_replay.py  test_asset_summary.py  test_assets.py  test_branding.py  test_buy.py  test_cli.py  test_dates.py  test_grouped_cli.py  test_help.py  test_income.py  test_numbers.py  test_output_polish.py  test_portfolio_allocation.py  test_release_readiness.py  test_sell.py  test_summary.py
