[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpal-cli"
version = "0.5.2"
description = "Multi-Portfolio Asset Ledger (mpal) - A minimal CLI tool for manual asset tracking and capital management."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["assets", "capital", "cli", "ledger", "portfolio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "rich>=13",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
release = [
    "build>=1",
    "twine>=5",
]

[project.scripts]
mpal = "mpal.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
